--- a/index.css
+++ b/index.css
@@ -2,15 +2,21 @@ body{
     margin: 0;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
-   min-width:400px;
+    min-width:400px;
+}
+.input{
+    text-align: center;
 }
 
 button{
     background-color:#5f9341;
     color: white;
-    padding: 10px;
+    padding: 5px;
     font-weight: bold;
     margin-top: 10px;
+    border-color: #5f9341;
+    border-radius: 4px;
+    text-align:center ;
 }
 button:hover{
     background-color: lightgreen;
@@ -22,7 +28,7 @@ input{
     padding-left: 10px;
     padding-right: 10px;
     box-sizing: border-box;
-    border: 1px solid #0b0b0a;
+    border: 1px solid #7d7d28;
     margin-bottom:4px;
     /* text-size-adjust: 100px; */
 }
