--- a/index.css
+++ b/index.css
@@ -3,12 +3,17 @@ body{
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     min-width:400px;
+    background:linear-gradient(to right,white,lightgreen,green);
+ /* background: radial-gradient(elips,red); */
 }
-.input{
+.input{ 
     text-align: center;
+    background:linear-gradient(to right,white,lightgreen,green);
+
 }
 
 button{
+
     background-color:#5f9341;
     color: white;
     padding: 5px;
@@ -17,6 +22,8 @@ button{
     border-color: #5f9341;
     border-radius: 4px;
     text-align:center ;
+    background:linear-gradient(to right,rgb(95, 86, 216));
+
 }
 button:hover{
     background-color: lightgreen;
@@ -43,5 +50,14 @@ li{
 }
 
 li a{
-    color:#5f9341;
+    color:#e120b7;
+}
+
+#list{
+    text-align: center;
+    margin-top: 40px;
+}
+
+#h{
+    color: #5120d6;
 }
